Bugfix 31767: Contrast Issue: Dropdown in Who-is-Online Tool (#3906)

--- a/templates/default/delos.css
+++ b/templates/default/delos.css
@@ -17732,7 +17732,7 @@ body.ilPrtfPdfBody .ilPCMyCoursesToggle img {
   font-size: 12px;
 }
 #awareness-content .dropdown-menu a {
-  color: #7c7c7c;
+  color: #161616;
 }
 #awareness-content .dropdown-menu a:hover {
   color: #000000;
